Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrAAC.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int AAC_GetParams(const INTPTR aacHandle, PCHAR buffer, const int bufferLen);

DllImport int AAC_IdentPaf_Paf_GetCupomMania(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetEmitePED(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetMinasLegal(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetRecompoeGT(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransfDAV(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_GetTransfPreVenda(const INTPTR aacHandle);

DllImport int AAC_IdentPaf_Paf_SetCupomMania(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetEmitePED(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetMinasLegal(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetRecompoeGT(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransfDAV(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_IdentPaf_Paf_SetTransfPreVenda(const INTPTR aacHandle, const BOOL check);

DllImport int AAC_SetParams(const INTPTR aacHandle, const PCHAR parametros);